test/types/void/void-field-8.good
void-field-8.chpl:4: error: Field 'a' cannot be declared 'void'. Consider using 'nothing' instead.
