test/types/void/void-field-8.chpl
type ta = void;

record r {
  var a : ta;
}

new r();
